--- a/Company.Repository/Company.Repository.csproj
+++ b/Company.Repository/Company.Repository.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data.Models\Compant.Data.csproj" />
+    <ProjectReference Include="..\Data.Models\Company.Data.csproj" />
   </ItemGroup>
 
 </Project>
