--- a/Compny.Web/appsettings.json
+++ b/Compny.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=DESKTOP-LCAGB3J\\SQLEXPRESS;database=CompanyMVCDb;trusted_connection=true;TrustServerCertificate=True"
+  }
 }
