Part 08 Upload File - Setup

--- a/Compny.Web/Compny.Web.csproj
+++ b/Compny.Web/Compny.Web.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Company.Service\Company.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Images\" />
+  </ItemGroup>
+
 </Project>
